// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mistakes render correctly With one count 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`Mistakes render correctly With zero count 1`] = `
<div
  className="game__mistakes"
/>
`;
